Landing page responsive finished

--- a/wp-content/themes/gsn/work-assests/scss/base/_variable.scss
+++ b/wp-content/themes/gsn/work-assests/scss/base/_variable.scss
@@ -2,8 +2,13 @@
  * Define the screen sizes in the varible
  * @author Nabin Maharjan <nabin.maharjan17@gmail.com>
  */
-$mq-mobile: 800px;
+
+// media query 
 $mq-tablet: 1024px;
+$mq-mobile: 800px;
+$mq-sm-mobile: 640px;
+
+
 
 
 /**
