--- a/wp-content/themes/gsn/work-assests/scss/components/_landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_landing.scss
@@ -37,6 +37,7 @@ body.page-template-register {
 
     @include max-screen($mq-sm-mobile) {
       width: 90%;
+      top: -20%;
     }
   }
 }
@@ -432,6 +433,10 @@ body.page-template-register {
     transform: translate(-50%, -50%) scale(0.8);
     box-shadow: 0px 4px 5px 0px rgba(56, 56, 56, 0.5);
     transition: transform 350ms cubic-bezier( 0.680, -0.550, 0.265, 1.18 ), opacity 500ms ease-out, visibility 500ms ease-out;
+
+    @include max-screen($mq-sm-mobile) {
+      width: 100%;
+    }
   }
   &__modal-heading {
     padding-bottom: 6px;
