--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-inner.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-inner.scss
@@ -39,7 +39,7 @@
       font-size: 11px;
       padding: 10px 20px;
 
-      &::befre {
+      &::before {
         font-size: 20px;
       }
     }
