--- a/wp-content/themes/gsn/work-assests/scss/components/_landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_landing.scss
@@ -21,7 +21,8 @@ body.page-template-register {
 
   .logo-wrap {
     width:40%;
-    max-width: 80%; 
+    max-width: 550px;
+	min-width: 280px;
     margin:0 auto; 
     position:relative;
     perspective: 1000px;
