--- a/wp-content/themes/gsn/work-assests/scss/components/_landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_landing.scss
@@ -18,6 +18,11 @@ body.page-template-register {
   background-position: center center;
   background-size: cover;
 
+  @include max-screen($mq-tablet) {
+     position: fixed;
+     height: auto !important;
+  }
+
   .logo-wrap {
     width:40%;
     max-width: 550px;
