--- a/wp-content/themes/gsn/work-assests/scss/style.scss
+++ b/wp-content/themes/gsn/work-assests/scss/style.scss
@@ -28,6 +28,7 @@
 @import "components/map";
 @import "components/alert";
 @import "components/pagination";
+@import "components/404"; // 404 page
 /* ====== Import COMPONENT CSS END ====== */
 
 /* ====== Dashboard Styles CSS ====== */
