--- a/wp-content/themes/gsn/work-assests/scss/components/_global.scss
+++ b/wp-content/themes/gsn/work-assests/scss/components/_global.scss
@@ -85,3 +85,8 @@ label.error {
 .wp-editor-container {
   border: 1px solid $light_gray;
 }
+.flex-center {
+  display: flex;
+  justify-content: cener;
+  align-items: center;
+}
