--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
@@ -132,6 +132,7 @@
 }
 
 .dashboard-info {
+  padding: 20px;
   // background: #efefef;
   // padding: 50px 35px;  
   // box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.4);
