--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-footer.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-footer.scss
@@ -1,4 +1,5 @@
 .footer {   
+  background: $gray_bg;
   color: $white;
   margin-top: 70px;    
 
@@ -99,4 +100,5 @@
   z-index: 10;
   bottom: 0;
   right: 0;
+  text-align: right;
 }
