--- a/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
+++ b/wp-content/themes/gsn/work-assests/scss/theme/_theme-header.scss
@@ -40,7 +40,7 @@
       // margin-top: 15px;
 
       img {
-        max-width: 150px;
+        max-width: 150px; margin-top:10px;
       }
     }
   }
