--- a/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
+++ b/wp-content/themes/gsn/work-assests/scss/dashboard/_dashboard-landing.scss
@@ -10,6 +10,20 @@
     font-size: 14px;
     padding: 15px 20px;
     margin: 0 15px 30px;
+    
+    @include max-screen($mq-tablet) {
+      margin: 0 10px 30px;
+
+      &.heading20 {
+        margin-left: 20px;
+        margin-right: 20px;
+      }
+    }
+
+    @include max-screen($mq-mobile) {
+      padding: 15px;
+      margin-bottom: 20px;                    
+    }
   }
   input[type="text"] {
     padding: 7px 15px;
@@ -27,6 +41,10 @@
   font-size: 24px;
   font-weight: bold;
   padding: 0 15px;
+
+  @include max-screen($mq-tablet) {
+    padding: 0 20px;
+  }
 }
 .summary-cards-cntr {
   margin-top: 30px;
@@ -34,9 +52,30 @@
   flex-wrap: wrap;
   clear: both;
 
+  @include max-screen($mq-tablet) {
+    padding: 0 10px;
+  }
+
   .summary__card {
     margin-bottom: 30px;
     float: none;
+
+    @include max-screen($mq-tablet) {
+      margin-bottom: 20px;
+      padding: 0 10px;
+
+      &.card--small {
+        width: 25%;
+      }
+    }
+
+    @include max-screen($mq-mobile) {
+      width: 50%;
+
+      &.card--small {
+        width: 50%;
+      }
+    }
 
     .summary-info {
       color: $white;
@@ -45,6 +84,14 @@
       padding: 25px;
       display: block;
       height: 100%;
+
+      @include max-screen($mq-tablet) {        
+        padding: 20px 15px;
+      }
+
+      @include max-screen($mq-mobile) {
+        padding: 35px 15px;
+      }
 
       > div {
         position: relative;
@@ -70,6 +117,11 @@
         background: $petal_green;
         z-index: 1;
         transition: all 0.2s ease-in-out;
+
+        @include max-screen($mq-tablet) {
+          left: 10px;
+          right: 10px;
+        }
       }
       &:hover::after {
         height: 100%;
